# SDL-BGFX-Integration

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/core/: camera.cpp  camera.h  material.cpp  material.h  mesh.cpp  mesh.h  model.h  renderable.cpp  renderable.h  texture.cpp  texture.h
src/shader/: shader.cpp  shader.h
src/utils/: vertex_types.h
tools/shaderc/: commands.txt  fs_basic.sc  vs_basic.sc
